--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.27.0",
+    "react-select": "^5.8.3",
     "react-typing-effect": "^2.0.5"
   },
   "devDependencies": {
