--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,12 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-modal": "^3.16.1",
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.27.0",
     "react-select": "^5.8.3",
+    "react-tabs": "^6.0.2",
+    "react-tooltip": "^5.28.0",
     "react-typing-effect": "^2.0.5"
   },
   "devDependencies": {
