--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.27.0",
     "react-select": "^5.8.3",
+    "react-select-async-paginate": "^0.7.7",
     "react-tabs": "^6.0.2",
     "react-tooltip": "^5.28.0",
     "react-typing-effect": "^2.0.5",
