--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,14 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "main": "main.mjs",
+
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start-electron": "electron ."
   },
   "dependencies": {
     "axios": "^1.7.7",
@@ -15,7 +18,6 @@
     "date-fns": "^4.1.0",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
-    "react-chartjs": "^1.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
@@ -37,6 +39,8 @@
     "@vitejs/plugin-react": "^4.3.3",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
+    "electron": "^33.2.1",
+    "electron-packager": "^17.1.2",
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
