--- a/client/package.json
+++ b/client/package.json
@@ -4,13 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "main": "main.mjs",
-
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start-electron": "electron ."
+    "start": "react-scripts start",
+    "build": "react-scripts build"
   },
   "dependencies": {
     "axios": "^1.7.7",
@@ -39,7 +38,6 @@
     "@vitejs/plugin-react": "^4.3.3",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
-    "electron": "^33.2.1",
     "electron-packager": "^17.1.2",
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.2",
